--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,8 @@ border-radius: 15px;
   padding-bottom: 15px;
   //width: 33.33%;
   x//float: left;
+  font-size: 16px;
+  border-radius: 5px;
 }
 
 footer {
@@ -121,11 +123,11 @@ a {
   color: #663d61;
 }
 
-#better{
-background-color: royalblue
- //color: crimson;    
+#better {
+  background-color: royalblue;
+  //color: crimson;
 }
 
-#resume{
-    font-size: 40px;
+#resume {
+  font-size: 40px;
 }
